--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goal oriented academy • GOA</title>
+    <link rel="website icon" type="jpeg" href="./src/assets/imgs/download (1).jpeg">
   </head>
   <body>
     <div id="root"></div>
